syntax = "proto3";
import "user.proto";
package pb;
option go_package = "./pb";


message RegisterReq{
    string username = 1;
    string password =  2;
    string email = 3;
}

message RegisterRes{
    User user =1;
    string  token = 2;
}

message LoginReq{
    string username = 1;
    string password =  2;
}

message LoginRes{
    User user =1;
    string  token = 2;
}