syntax = "proto3";
import "user_register_rpc.proto";
import "google/api/annotations.proto";
package pb;
option go_package = "./pb";


service UserService{
    rpc Register(RegisterReq)returns (RegisterRes){
         option (google.api.http) = {
            post: "/user/register"
            body: "*"
        };
    };
}